--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>api</module>
         <module>processor</module>
         <module>integration-tests</module>
+        <module>samples</module>
     </modules>
 
     <build>
