--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>value</artifactId>
             <version>2.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>serial</artifactId>
+            <version>2.5.5</version>
+        </dependency>
     </dependencies>
 </project>
