--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -14,11 +14,13 @@
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
             <version>2.5.5</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>serial</artifactId>
             <version>2.5.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
